--- a/style.css
+++ b/style.css
@@ -26,8 +26,17 @@
     font-size: 16px;
     width: 400px;
 }
+.account2 {
+    background: #ec920b;
+    color: rgb(248, 243, 240);
+    padding: 8px;
+    text-align: center;
+    display: block;
+    font-size: 16px;
+    width: 400px;
+}
 .login_form input{
-    padding: 10px 25px;
+    padding: 10px 17px;
     width: calc(100% - 40px); /* Adjusted input width to accommodate the close button */
     margin-bottom: 10px;
     font-size: 16px;
