--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     display: block;
     font-size: 16px;
     width: 400px;
+    border: none;
 }
 .account2 {
     background: #ec920b;
@@ -32,6 +33,7 @@
     padding: 8px;
     text-align: center;
     display: block;
+    border: none;
     font-size: 16px;
     width: 400px;
 }
@@ -55,6 +57,7 @@
     padding: 5px 15px;
     background: #184fe7;
     color: beige;
+    border: none;
 }
 
 .create_account_form input {
